{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "0a58f9e2-2032-473c-aa8d-d109eb73094a",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "77c1961b-1eb8-41ca-a258-e4bb82f3ecd9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "SpeedUp",
                    "type": "Button",
                    "id": "1884655d-7fed-4156-be7f-f37de94e14b2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "SpeedDown",
                    "type": "Button",
                    "id": "e6c514ff-f619-485a-a34b-d6f6b0cadf27",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateRight",
                    "type": "Button",
                    "id": "c3e0f49d-607b-4447-84ff-c5404f69d314",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "MultiTap(tapCount=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateLeft",
                    "type": "Button",
                    "id": "6907f9d7-aa71-4d76-8dc1-1b84c4cb3891",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "MultiTap(tapCount=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "175473be-b3d5-469d-8a5a-88a804889e04",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "945104b4-5eca-4a8b-ac73-3462e4463d4f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ce66cda-ae17-4a07-865c-eccd49e4aca3",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c7db8db-2a91-41d3-a06f-fef959201110",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9dc8039-b0eb-405c-a672-492347ba20b9",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b668e9f-c3f3-48d9-90cf-224d7c60136a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a28e19e-3968-4712-ad43-9b828885f251",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}